crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_resource_lease_receipt_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedResourceLeaseTransitionReceipt;

fn decode(bytes: &[u8]) {
    let _: UnvalidatedResourceLeaseTransitionReceipt = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
